Fix vertical-align of » before headings

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -53,7 +53,9 @@ h4::before,
 h5::before,
 h6::before {
     content: "»";
-    margin-right: .25rem;
+    margin-right: 0.25rem;
+    display: inline-block;
+    vertical-align: 7%;
 }
 
 h1 {
